--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ trigger:
 - main
 
 pool:
-  vmImage: 'ubuntu-latest' # CAMBIO CLAVE: Usamos agentes de Microsoft para que sea instantáneo
+  name: 'Default'
 
 stages:
 - stage: Build
